--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/src/main.go"
+      "destination": "/main.go"
     }
   ]
 }
